--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ body {
   box-sizing: inherit;
   background-color: hsl(154, 59%, 51%);
   width: 100%;
-  padding: 1.0625rem 1.5625rem 0.8125rem;
+  padding: 1rem 1.5625rem 0.875rem;
   box-shadow: inset 0 -0.25rem 0 rgba(0, 0, 0, 0.0908818);
   font-weight: 600;
   font-size: 0.9375rem;
@@ -196,6 +196,7 @@ body {
   .intro {
     background-image: url(../images/bg-intro-desktop.png);
     background-position: center;
+    background-size: 99%;
   }
 }
 @media (min-width: 78.125em) {
